# speech-bubble-translate

./: .gitignore  copy_to_game.py  detect_speech_bubbles.py  insert_translated_text.py  main.py  pyproject.toml  readme.md  translate.py  visualize_bounds.py
media/: text_changes_log.txt
